# fluent-bit-perf

./: CMakeLists.txt  README.md
include/: flb_data_file.h  flb_network.h  flb_proc.h  flb_report.h
src/: CMakeLists.txt  flb-tail-writer.c  flb-tcp-writer.c  flb_data_file.c  flb_network.c  flb_proc.c  flb_report.c  flb_utils.c
test-scenario/: fluent-bit-tail-tcp.yaml  fluentd.conf  otel-collector.yaml  performance_test_data.txt  run.sh  vector.toml
